--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" &&  exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Azure DevOps Extension",
+    "TFS Server Extension"
+  ],
+  "repository": {
+    "type": "git"
+  },
+  "author": "Hamed Moghadasi",
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.4.0",
